CMAKE_MINIMUM_REQUIRED(VERSION 3.2 FATAL_ERROR)

# BUILD_SHARED_LIBS can controll build type!
PROJECT(Bee
		VERSION 0.0.2
		LANGUAGES CXX
		)

ADD_LIBRARY(Bee
		src/cpp/bee/Beehive.cpp include/bee/Beehive.h
		)

SET_TARGET_PROPERTIES(Bee PROPERTIES
		CXX_STANDARD 14
		)

TARGET_INCLUDE_DIRECTORIES(Bee PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/lib/Selene/include/>
		$<INSTALL_INTERFACE:include/>
		PRIVATE src/cpp/
		)

TARGET_COMPILE_OPTIONS(Bee PRIVATE
		-Wall -pedantic
		-Wnon-virtual-dtor
		-Werror
		)

IF(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
	TARGET_COMPILE_OPTIONS(Bee PRIVATE
			-Wno-error=unknown-argument
			)
ENDIF()
